@@ -38,6 +38,7 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+
 }
 
 jacocoTestReport {
@@ -48,6 +49,7 @@ jacocoTestReport {
 
 test {
     finalizedBy jacocoTestReport // report is always generated after tests run
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 jacocoTestReport {
     dependsOn test // tests are required to run before generating the report
@@ -58,5 +60,6 @@ sonar {
         property "sonar.projectKey", "ifeanyichukwuOtiwa-sports_ss-security"
         property "sonar.organization", "ifeanyichukwuotiwa-sports"
         property "sonar.host.url", "https://sonarcloud.io"
+        property("sonar.gradle.skipCompile", true)
     }
 }
